Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2972. Avoid task rescheduling when a node turns unhealthy

ALL CHANGES:
  TEZ-3224. User payload is not initialized before creating vertex manager plugin. 
  TEZ-3165. Allow Inputs/Outputs to be initialized serially, control processor initialization relative to Inputs/Outputs
  TEZ-3202. Reduce the memory need for jobs with high number of segments
  TEZ-3188. Move tez.submit.hosts out of TezConfiguration to TezConfigurationConstants.
  TEZ-3196. java.lang.InternalError from decompression codec is fatal to a task during shuffle
  TEZ-3177. Non-DAG events should use the session domain or no domain if the data does not need protection.
  TEZ-3192. IFile#checkState creating unnecessary objects though auto-boxing
  TEZ-3189. Pre-warm dags should not be counted in submitted dags count by DAGAppMaster.
  TEZ-2967. Vertex start time should be that of first task start time in UI
  TEZ-3175. Add tez client submit host
  TEZ-3166. Fix a few cases where counters aren't fully updated and sent for failed tasks. Only adds tests.
  TEZ-2958. Recovered TA, whose commit cannot be recovered, should move to killed state
  TEZ-3105. TezMxBeanResourceCalculator does not work on IBM JDK 7 or 8 causing Tez failures.
  TEZ-2863. Container, node, and logs not available in UI for tasks that fail to launch
  TEZ-3140. Reduce AM memory usage during serialization
  TEZ-3156. Tez client keeps trying to talk to RM even if RM does not know about the application. 
  TEZ-3115. Shuffle string handling adds significant memory overhead
  TEZ-3149. Tez-tools: Add username in DagInfo
  TEZ-2988. DAGAppMaster::shutdownTezAM should return with a no-op if it has been invoked earlier.
  TEZ-3147. Intermediate mem-to-mem: Fix early exit when only one segment can fit into memory