@@ -9,6 +9,7 @@ INCOMPATIBLE CHANGES
   TEZ-2972. Avoid task rescheduling when a node turns unhealthy
 
 ALL CHANGES:
+  TEZ-3213. Uncaught exception during vertex recovery leads to invalid state transition loop.
   TEZ-3224. User payload is not initialized before creating vertex manager plugin. 
   TEZ-3165. Allow Inputs/Outputs to be initialized serially, control processor initialization relative to Inputs/Outputs
   TEZ-3202. Reduce the memory need for jobs with high number of segments
